fixed header for horizontal scrolling of main content

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,6 @@
 .mainContainer {
     background-color: #f4f7fd;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
+    overflow-x: scroll;
 }
