--- a/src/components/TaskList/TaskList.module.css
+++ b/src/components/TaskList/TaskList.module.css
@@ -1,5 +1,4 @@
 .taskList {
-    margin-left: 1.6rem;
 }
 
 .taskList__title {
